--- a/index.html
+++ b/index.html
@@ -7,8 +7,101 @@
   </head>
   <body>
     <header>
-      <h1>Hello word</h1>
-      <h2>I`m happy</h2>
+      <nav>
+        <a href=""
+          ><p><span>WEB</span>STUDIO</p></a
+        >
+        <ul>
+          <li>Studio</li>
+          <li>Portfolio</li>
+          <li>Contacts</li>
+        </ul>
+      </nav>
+      <address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+11 (000) 111-11-11">11 (000) 111-11-11</a>
+      </address>
     </header>
+    <main>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li><img src="./images/computer.jpg" alt="computer" /></li>
+          <li><img src="./images/screenshot.jpg" alt="screenshot" /></li>
+          <li><img src="./images/phone.jpg" alt="phone" /></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img src="./images/Mark Guerrero.jpg" alt="Mark Guerrero" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/Tom Ford.jpg" alt="Tom Ford" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/Camila Garcia.jpg" alt="Camila Garcia" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/Daniel Wilson.jpg" alt="Daniel Wilson" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href=""
+        ><p><span>WEB</span>STUDIO</p></a
+      >
+      <p>
+        Increase the flow of customers and <br />
+        sales for your business with digital <br />
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
