--- a/index.html
+++ b/index.html
@@ -62,31 +62,47 @@
       <section>
         <h2>What are we doing</h2>
         <ul>
-          <li><img src="./images/computer.jpg" alt="computer" /></li>
-          <li><img src="./images/screenshot.jpg" alt="screenshot" /></li>
-          <li><img src="./images/phone.jpg" alt="phone" /></li>
+          <li>
+            <img src="./images/computer.jpg" alt="computer" width="360" />
+          </li>
+          <li>
+            <img src="./images/screenshot.jpg" alt="screenshot" width="360" />
+          </li>
+          <li><img src="./images/phone.jpg" alt="phone" width="360" /></li>
         </ul>
       </section>
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/Mark Guerrero.jpg" alt="Mark Guerrero" />
+            <img
+              src="./images/Mark Guerrero.jpg"
+              alt="Mark Guerrero"
+              width="264"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/Tom Ford.jpg" alt="Tom Ford" />
+            <img src="./images/Tom Ford.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/Camila Garcia.jpg" alt="Camila Garcia" />
+            <img
+              src="./images/Camila Garcia.jpg"
+              alt="Camila Garcia"
+              width="264"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/Daniel Wilson.jpg" alt="Daniel Wilson" />
+            <img
+              src="./images/Daniel Wilson.jpg"
+              alt="Daniel Wilson"
+              width="264"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
