--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header>
@@ -12,7 +17,7 @@
           ><p><span>WEB</span>STUDIO</p></a
         >
         <ul>
-          <li>Studio</li>
+          <li class="text">Studio</li>
           <li>Portfolio</li>
           <li>Contacts</li>
         </ul>
