--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
   <body>
     <header>
       <nav>
-        <a href=""
-          ><p><span>WEB</span>STUDIO</p></a
+        <a href="./index.html" class="list"
+          ><p class="logo"><span class="logo-span">WEB</span>STUDIO</p></a
         >
-        <ul>
-          <li class="text">Studio</li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
+        <ul class="list">
+          <li><a href="" class="list navigation">Studio</a></li>
+          <li><a href="./portfolio.html" class="list navigation">Portfolio</a></li>
+          <li><a href="" class="list navigation">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11 (000) 111-11-11">11 (000) 111-11-11</a>
+      <address class="">
+        <a href="mailto:info@devstudio.com" class="list ">info@devstudio.com</a>
+        <a href="tel:+11 (000) 111-11-11" class="list">11 (000) 111-11-11</a>
       </address>
     </header>
     <main>
       <section>
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="hero title">Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
-        <ul>
+        <ul class="list">
           <li>
             <h3>Strategy</h3>
             <p>
@@ -65,8 +65,8 @@
         </ul>
       </section>
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="title">What are we doing</h2>
+        <ul class="list">
           <li>
             <img src="./images/computer.jpg" alt="computer" width="360" />
           </li>
@@ -77,8 +77,8 @@
         </ul>
       </section>
       <section>
-        <h2>Our Team</h2>
-        <ul>
+        <h2 class="title">Our Team</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/Mark Guerrero.jpg"
@@ -115,10 +115,9 @@
       </section>
     </main>
     <footer>
-      <a href=""
-        ><p><span>WEB</span>STUDIO</p></a
-      >
-      <p>
+      <a href="./index.html" class="list"
+          ><p class="logo"><span class="logo-span">WEB</span>STUDIO</p></a
+        >
         Increase the flow of customers and <br />
         sales for your business with digital <br />
         marketing & growth solutions.
