--- a/index.html
+++ b/index.html
@@ -17,47 +17,53 @@
           ><p class="logo"><span class="logo-span">WEB</span>STUDIO</p></a
         >
         <ul class="list">
-          <li><a href="" class="list navigation">Studio</a></li>
-          <li><a href="./portfolio.html" class="list navigation">Portfolio</a></li>
+          <li><a href="./index.html" class="list navigation">Studio</a></li>
+          <li>
+            <a href="./portfolio.html" class="list navigation">Portfolio</a>
+          </li>
           <li><a href="" class="list navigation">Contacts</a></li>
         </ul>
       </nav>
       <address class="">
-        <a href="mailto:info@devstudio.com" class="list ">info@devstudio.com</a>
-        <a href="tel:+11 (000) 111-11-11" class="list">11 (000) 111-11-11</a>
+        <a href="mailto:info@devstudio.com" class="list contact"
+          >info@devstudio.com</a
+        >
+        <a href="tel:+11 (000) 111-11-11" class="list contact"
+          >11 (000) 111-11-11</a
+        >
       </address>
     </header>
     <main>
-      <section>
+      <section class="hero-section">
         <h1 class="hero title">Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button type="button" class="btn">Order Service</button>
       </section>
       <section>
         <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="subtitle">Strategy</h3>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="subtitle">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="subtitle">Diligence</h3>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="subtitle">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -76,7 +82,7 @@
           <li><img src="./images/phone.jpg" alt="phone" width="360" /></li>
         </ul>
       </section>
-      <section>
+      <section class="team-section">
         <h2 class="title">Our Team</h2>
         <ul class="list">
           <li>
@@ -85,13 +91,13 @@
               alt="Mark Guerrero"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="subtitle">Mark Guerrero</h3>
+            <p class="text">Product Designer</p>
           </li>
           <li>
             <img src="./images/Tom Ford.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="subtitle">Tom Ford</h3>
+            <p class="text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -99,8 +105,8 @@
               alt="Camila Garcia"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="subtitle">Camila Garcia</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -108,16 +114,17 @@
               alt="Daniel Wilson"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="subtitle">Daniel Wilson</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
       <a href="./index.html" class="list"
-          ><p class="logo"><span class="logo-span">WEB</span>STUDIO</p></a
-        >
+        ><p class="logo"><span class="logo-span">WEB</span>STUDIO</p></a
+      >
+      <p class="text">
         Increase the flow of customers and <br />
         sales for your business with digital <br />
         marketing & growth solutions.
