--- a/portfolio.html
+++ b/portfolio.html
@@ -16,50 +16,55 @@
         <a href="./index.html" class="list"
           ><p class="logo"><span class="logo-span">WEB</span>STUDIO</p></a
         >
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="list">
+          <li><a href="" class="list navigation">Studio</a></li>
+          <li>
+            <a href="./portfolio.html" class="list navigation">Portfolio</a>
+          </li>
+          <li><a href="" class="list navigation">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11 (000) 111-11-11">11 (000) 111-11-11</a>
+      <address class="">
+        <a href="mailto:info@devstudio.com" class="list contact"
+          >info@devstudio.com</a
+        >
+        <a href="tel:+11 (000) 111-11-11" class="list contact"
+          >11 (000) 111-11-11</a
+        >
       </address>
     </header>
     <main>
-      <ul>
-        <li><button type="button">All</button></li>
-        <li><button type="button">Web Site</button></li>
-        <li><button type="button">App</button></li>
-        <li><button type="button">Design</button></li>
-        <li><button type="button">Marketing</button></li>
+      <ul class="list">
+        <li><button type="button" class="btn">All</button></li>
+        <li><button type="button" class="btn">Web Site</button></li>
+        <li><button type="button" class="btn">App</button></li>
+        <li><button type="button" class="btn">Design</button></li>
+        <li><button type="button" class="btn">Marketing</button></li>
       </ul>
-      <ul>
+      <ul class="list">
         <li>
           <img
             src="./images/BankApp.jpg"
             alt="Banking App Interface Concept"
             width="360"
           />
-          <h2></h2>
-          <p>App</p>
+          <h2 class="subtitle">Banking App Interface Concept</h2>
+          <p class="text">App</p>
         </li>
         <li>
           <img src="./images/Payment.jpg" alt="Cashless Payment" width="360" />
-          <h2>Cashless Payment</h2>
-          <p>Marketing</p>
-          width="360"
+          <h2 class="subtitle">Cashless Payment</h2>
+          <p class="text">Marketing</p>
         </li>
         <li>
           <img src="./images/App.jpg" alt="Meditation App" width="360" />
-          <h2>Meditation App</h2>
-          <p>App</p>
+          <h2 class="subtitle">Meditation App</h2>
+          <p class="text">App</p>
         </li>
         <li>
           <img src="./images/TaxiService.jpg" alt="Taxi Service" width="360" />
-          <h2>Taxi Service</h2>
-          <p>Marketing</p>
+          <h2 class="subtitle">Taxi Service</h2>
+          <p class="text">Marketing</p>
         </li>
         <li>
           <img
@@ -67,8 +72,8 @@
             alt="Screen Illustrations"
             width="360"
           />
-          <h2>Screen Illustrations</h2>
-          <p>Design</p>
+          <h2 class="subtitle">Screen Illustrations</h2>
+          <p class="text">Design</p>
         </li>
         <li>
           <img
@@ -76,8 +81,8 @@
             alt="Online Courses"
             width="360"
           />
-          <h2>Online Courses</h2>
-          <p>Marketing</p>
+          <h2 class="subtitle">Online Courses</h2>
+          <p class="text">Marketing</p>
         </li>
         <li>
           <img
@@ -85,26 +90,26 @@
             alt="Instagram Stories Concept"
             width="360"
           />
-          <h2>Instagram Stories Concept</h2>
-          <p>Design</p>
+          <h2 class="subtitle">Instagram Stories Concept</h2>
+          <p class="text">Design</p>
         </li>
         <li>
           <img src="./images/OrganicFood.jpg" alt="Organic Food" width="360" />
-          <h2>Organic Food</h2>
-          <p>Web Site</p>
+          <h2 class="subtitle">Organic Food</h2>
+          <p class="text">Web Site</p>
         </li>
         <li>
           <img src="./images/Coffe.jpg" alt="Fresh Coffee" width="360" />
-          <h2>Fresh Coffee</h2>
-          <p>Web Site</p>
+          <h2 class="subtitle">Fresh Coffee</h2>
+          <p class="text">Web Site</p>
         </li>
       </ul>
     </main>
     <footer>
       <a href="./index.html" class="list"
-          ><p class="logo"><span class="logo-span">WEB</span>STUDIO</p></a
-        >
-      <p>
+        ><p class="logo"><span class="logo-span">WEB</span>STUDIO</p></a
+      >
+      <p class="text">
         Increase the flow of customers and <br />
         sales for your business with digital <br />
         marketing & growth solutions.
