--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer-section">
       <a href="./index.html" class="list"
-        ><p class="logo"><span class="logo-span">WEB</span>STUDIO</p></a
+        ><p class="logo footer"><span class="logo-span">WEB</span>STUDIO</p></a
       >
-      <p class="text">
+      <p class="text footer">
         Increase the flow of customers and <br />
         sales for your business with digital <br />
         marketing & growth solutions.
