--- a/portfolio.html
+++ b/portfolio.html
@@ -35,11 +35,11 @@
     </header>
     <main>
       <ul class="list">
-        <li><button type="button" class="btn">All</button></li>
-        <li><button type="button" class="btn">Web Site</button></li>
-        <li><button type="button" class="btn">App</button></li>
-        <li><button type="button" class="btn">Design</button></li>
-        <li><button type="button" class="btn">Marketing</button></li>
+        <li><button type="button" class="btn portfolio">All</button></li>
+        <li><button type="button" class="btn portfolio">Web Site</button></li>
+        <li><button type="button" class="btn portfolio">App</button></li>
+        <li><button type="button" class="btn portfolio">Design</button></li>
+        <li><button type="button" class="btn portfolio">Marketing</button></li>
       </ul>
       <ul class="list">
         <li>
@@ -105,11 +105,11 @@
         </li>
       </ul>
     </main>
-    <footer>
+    <footer class="footer-section">
       <a href="./index.html" class="list"
-        ><p class="logo"><span class="logo-span">WEB</span>STUDIO</p></a
+        ><p class="logo footer"><span class="logo-span">WEB</span>STUDIO</p></a
       >
-      <p class="text">
+      <p class="text footer">
         Increase the flow of customers and <br />
         sales for your business with digital <br />
         marketing & growth solutions.
