--- a/portfolio.html
+++ b/portfolio.html
@@ -8,112 +8,138 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="list"
-          ><p class="logo"><span class="logo-span">WEB</span>STUDIO</p></a
-        >
-        <ul class="list">
-          <li><a href="" class="list navigation">Studio</a></li>
-          <li>
-            <a href="./portfolio.html" class="list navigation">Portfolio</a>
-          </li>
-          <li><a href="" class="list navigation">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="">
-        <a href="mailto:info@devstudio.com" class="list contact"
-          >info@devstudio.com</a
-        >
-        <a href="tel:+11 (000) 111-11-11" class="list contact"
-          >11 (000) 111-11-11</a
-        >
-      </address>
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="list"
+            ><p class="logo"><span class="logo-span">WEB</span>STUDIO</p></a
+          >
+          <ul class="list">
+            <li><a href="" class="list navigation">Studio</a></li>
+            <li>
+              <a href="./portfolio.html" class="list navigation">Portfolio</a>
+            </li>
+            <li><a href="" class="list navigation">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="">
+          <a href="mailto:info@devstudio.com" class="list contact"
+            >info@devstudio.com</a
+          >
+          <a href="tel:+110001111111" class="list contact"
+            >11 (000) 111-11-11</a
+          >
+        </address>
+      </div>
     </header>
     <main>
-      <ul class="list">
-        <li><button type="button" class="btn portfolio">All</button></li>
-        <li><button type="button" class="btn portfolio">Web Site</button></li>
-        <li><button type="button" class="btn portfolio">App</button></li>
-        <li><button type="button" class="btn portfolio">Design</button></li>
-        <li><button type="button" class="btn portfolio">Marketing</button></li>
-      </ul>
-      <ul class="list">
-        <li>
-          <img
-            src="./images/BankApp.jpg"
-            alt="Banking App Interface Concept"
-            width="360"
-          />
-          <h2 class="subtitle">Banking App Interface Concept</h2>
-          <p class="text">App</p>
-        </li>
-        <li>
-          <img src="./images/Payment.jpg" alt="Cashless Payment" width="360" />
-          <h2 class="subtitle">Cashless Payment</h2>
-          <p class="text">Marketing</p>
-        </li>
-        <li>
-          <img src="./images/App.jpg" alt="Meditation App" width="360" />
-          <h2 class="subtitle">Meditation App</h2>
-          <p class="text">App</p>
-        </li>
-        <li>
-          <img src="./images/TaxiService.jpg" alt="Taxi Service" width="360" />
-          <h2 class="subtitle">Taxi Service</h2>
-          <p class="text">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/Screen.jpg"
-            alt="Screen Illustrations"
-            width="360"
-          />
-          <h2 class="subtitle">Screen Illustrations</h2>
-          <p class="text">Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/OnlineCourses.jpg"
-            alt="Online Courses"
-            width="360"
-          />
-          <h2 class="subtitle">Online Courses</h2>
-          <p class="text">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/InstagramStoriesConcept.jpg"
-            alt="Instagram Stories Concept"
-            width="360"
-          />
-          <h2 class="subtitle">Instagram Stories Concept</h2>
-          <p class="text">Design</p>
-        </li>
-        <li>
-          <img src="./images/OrganicFood.jpg" alt="Organic Food" width="360" />
-          <h2 class="subtitle">Organic Food</h2>
-          <p class="text">Web Site</p>
-        </li>
-        <li>
-          <img src="./images/Coffe.jpg" alt="Fresh Coffee" width="360" />
-          <h2 class="subtitle">Fresh Coffee</h2>
-          <p class="text">Web Site</p>
-        </li>
-      </ul>
+      <div class="container">
+        <ul class="list">
+          <li><button type="button" class="btn portfolio">All</button></li>
+          <li><button type="button" class="btn portfolio">Web Site</button></li>
+          <li><button type="button" class="btn portfolio">App</button></li>
+          <li><button type="button" class="btn portfolio">Design</button></li>
+          <li>
+            <button type="button" class="btn portfolio">Marketing</button>
+          </li>
+        </ul>
+        <ul class="list">
+          <li>
+            <img
+              src="./images/BankApp.jpg"
+              alt="Banking App Interface Concept"
+              width="360"
+            />
+            <h2 class="subtitle">Banking App Interface Concept</h2>
+            <p class="text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/Payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+            />
+            <h2 class="subtitle">Cashless Payment</h2>
+            <p class="text">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/App.jpg" alt="Meditation App" width="360" />
+            <h2 class="subtitle">Meditation App</h2>
+            <p class="text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/TaxiService.jpg"
+              alt="Taxi Service"
+              width="360"
+            />
+            <h2 class="subtitle">Taxi Service</h2>
+            <p class="text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/Screen.jpg"
+              alt="Screen Illustrations"
+              width="360"
+            />
+            <h2 class="subtitle">Screen Illustrations</h2>
+            <p class="text">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/OnlineCourses.jpg"
+              alt="Online Courses"
+              width="360"
+            />
+            <h2 class="subtitle">Online Courses</h2>
+            <p class="text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/InstagramStoriesConcept.jpg"
+              alt="Instagram Stories Concept"
+              width="360"
+            />
+            <h2 class="subtitle">Instagram Stories Concept</h2>
+            <p class="text">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/OrganicFood.jpg"
+              alt="Organic Food"
+              width="360"
+            />
+            <h2 class="subtitle">Organic Food</h2>
+            <p class="text">Web Site</p>
+          </li>
+          <li>
+            <img src="./images/Coffe.jpg" alt="Fresh Coffee" width="360" />
+            <h2 class="subtitle">Fresh Coffee</h2>
+            <p class="text">Web Site</p>
+          </li>
+        </ul>
+      </div>
     </main>
     <footer class="footer-section">
-      <a href="./index.html" class="list"
-        ><p class="logo footer"><span class="logo-span">WEB</span>STUDIO</p></a
-      >
-      <p class="text footer">
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="list"
+          ><p class="logo footer">
+            <span class="logo-span">WEB</span>STUDIO
+          </p></a
+        >
+        <p class="text footer">
+          Increase the flow of customers and <br />
+          sales for your business with digital <br />
+          marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
