--- a/index.html
+++ b/index.html
@@ -8,127 +8,146 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="list"
-          ><p class="logo"><span class="logo-span">WEB</span>STUDIO</p></a
-        >
-        <ul class="list">
-          <li><a href="./index.html" class="list navigation">Studio</a></li>
-          <li>
-            <a href="./portfolio.html" class="list navigation">Portfolio</a>
-          </li>
-          <li><a href="" class="list navigation">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="">
-        <a href="mailto:info@devstudio.com" class="list contact"
-          >info@devstudio.com</a
-        >
-        <a href="tel:+11 (000) 111-11-11" class="list contact"
-          >11 (000) 111-11-11</a
-        >
-      </address>
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="list"
+            ><p class="logo"><span class="logo-span">WEB</span>STUDIO</p></a
+          >
+          <ul class="list">
+            <li><a href="./index.html" class="list navigation">Studio</a></li>
+            <li>
+              <a href="./portfolio.html" class="list navigation">Portfolio</a>
+            </li>
+            <li><a href="" class="list navigation">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="">
+          <a href="mailto:info@devstudio.com" class="list contact"
+            >info@devstudio.com</a
+          >
+          <a href="tel:+110001111111" class="list contact"
+            >11 (000) 111-11-11</a
+          >
+        </address>
+      </div>
     </header>
     <main>
       <section class="hero-section">
-        <h1 class="hero title">Effective Solutions for Your Business</h1>
-        <button type="button" class="btn">Order Service</button>
+        <div class="container">
+          <h1 class="hero title">Effective Solutions for Your Business</h1>
+          <button type="button" class="btn">Order Service</button>
+        </div>
       </section>
       <section>
-        <ul class="list">
-          <li>
-            <h3 class="subtitle">Strategy</h3>
-            <p class="text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="subtitle">Punctuality</h3>
-            <p class="text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="subtitle">Diligence</h3>
-            <p class="text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="subtitle">Technologies</h3>
-            <p class="text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title">Rules</h2>
+          <ul class="list">
+            <li>
+              <h3 class="subtitle">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="subtitle">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="subtitle">Diligence</h3>
+              <p class="text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="subtitle">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section>
-        <h2 class="title">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/computer.jpg" alt="computer" width="360" />
-          </li>
-          <li>
-            <img src="./images/screenshot.jpg" alt="screenshot" width="360" />
-          </li>
-          <li><img src="./images/phone.jpg" alt="phone" width="360" /></li>
-        </ul>
+        <div class="container">
+          <h2 class="title">What are we doing</h2>
+          <ul class="list">
+            <li>
+              <img src="./images/computer.jpg" alt="computer" width="360" />
+            </li>
+            <li>
+              <img src="./images/screenshot.jpg" alt="screenshot" width="360" />
+            </li>
+            <li><img src="./images/phone.jpg" alt="phone" width="360" /></li>
+          </ul>
+        </div>
       </section>
       <section class="team-section">
-        <h2 class="title">Our Team</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/Mark Guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-            />
-            <h3 class="subtitle">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/Tom Ford.jpg" alt="Tom Ford" width="264" />
-            <h3 class="subtitle">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/Camila Garcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-            />
-            <h3 class="subtitle">Camila Garcia</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/Daniel Wilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-            />
-            <h3 class="subtitle">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title">Our Team</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./images/Mark-Guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
+              <h3 class="subtitle">Mark Guerrero</h3>
+              <p class="text">Product Designer</p>
+            </li>
+            <li>
+              <img src="./images/Tom-Ford.jpg" alt="Tom Ford" width="264" />
+              <h3 class="subtitle">Tom Ford</h3>
+              <p class="text">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="./images/Camila-Garcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
+              <h3 class="subtitle">Camila Garcia</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/Daniel-Wilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
+              <h3 class="subtitle">Daniel Wilson</h3>
+              <p class="text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer-section">
-      <a href="./index.html" class="list"
-        ><p class="logo footer"><span class="logo-span">WEB</span>STUDIO</p></a
-      >
-      <p class="text footer">
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="list"
+          ><p class="logo footer">
+            <span class="logo-span">WEB</span>STUDIO
+          </p></a
+        >
+        <p class="text footer">
+          Increase the flow of customers and <br />
+          sales for your business with digital <br />
+          marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
