--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
       </div>
     </header>
     <main>
-      <section class="hero-section">
+      <section class="hero-section section">
         <div class="container">
           <h1 class="hero title">Effective Solutions for Your Business</h1>
           <button type="button" class="btn">Order Service</button>
         </div>
       </section>
-      <section>
+      <section class="section">
         <div class="container">
-          <h2 class="title">Rules</h2>
+          <!-- <h2 class="title">Rules</h2> -->
           <ul class="list">
             <li>
               <h3 class="subtitle">Strategy</h3>
@@ -82,7 +82,7 @@
           </ul>
         </div>
       </section>
-      <section>
+      <section class="section">
         <div class="container">
           <h2 class="title">What are we doing</h2>
           <ul class="list">
