--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header-section">
       <div class="container">
         <nav>
           <a href="./index.html" class="list"
