--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="section about">
         <div class="container">
           <h2 class="title">What are we doing</h2>
           <ul class="list">
@@ -96,7 +96,7 @@
           </ul>
         </div>
       </section>
-      <section class="team-section">
+      <section class="team-section section">
         <div class="container">
           <h2 class="title">Our Team</h2>
           <ul class="list">
