--- a/portfolio.html
+++ b/portfolio.html
@@ -17,20 +17,24 @@
   </head>
   <body>
     <header class="header-section">
-      <div class="container">
-        <nav>
+      <div class="container header">
+        <nav class="main-nav">
           <a href="./index.html" class="list"
             ><p class="logo"><span class="logo-span">WEB</span>STUDIO</p></a
           >
-          <ul class="list">
-            <li><a href="" class="list navigation">Studio</a></li>
-            <li>
+          <ul class="list nav">
+            <li class="item">
+              <a href="./index.html" class="list navigation">Studio</a>
+            </li>
+            <li class="item">
               <a href="./portfolio.html" class="list navigation">Portfolio</a>
             </li>
-            <li><a href="" class="list navigation">Contacts</a></li>
+            <li class="item">
+              <a href="" class="list navigation">Contacts</a>
+            </li>
           </ul>
         </nav>
-        <address class="">
+        <address class="addres">
           <a href="mailto:info@devstudio.com" class="list contact"
             >info@devstudio.com</a
           >
@@ -41,92 +45,137 @@
       </div>
     </header>
     <main>
-      <div class="container">
-        <ul class="list">
-          <li><button type="button" class="btn portfolio">All</button></li>
-          <li><button type="button" class="btn portfolio">Web Site</button></li>
-          <li><button type="button" class="btn portfolio">App</button></li>
-          <li><button type="button" class="btn portfolio">Design</button></li>
-          <li>
-            <button type="button" class="btn portfolio">Marketing</button>
-          </li>
-        </ul>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/BankApp.jpg"
-              alt="Banking App Interface Concept"
-              width="360"
-            />
-            <h2 class="subtitle">Banking App Interface Concept</h2>
-            <p class="text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/Payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-            />
-            <h2 class="subtitle">Cashless Payment</h2>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/App.jpg" alt="Meditation App" width="360" />
-            <h2 class="subtitle">Meditation App</h2>
-            <p class="text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/TaxiService.jpg"
-              alt="Taxi Service"
-              width="360"
-            />
-            <h2 class="subtitle">Taxi Service</h2>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/Screen.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h2 class="subtitle">Screen Illustrations</h2>
-            <p class="text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/OnlineCourses.jpg"
-              alt="Online Courses"
-              width="360"
-            />
-            <h2 class="subtitle">Online Courses</h2>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/InstagramStoriesConcept.jpg"
-              alt="Instagram Stories Concept"
-              width="360"
-            />
-            <h2 class="subtitle">Instagram Stories Concept</h2>
-            <p class="text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/OrganicFood.jpg"
-              alt="Organic Food"
-              width="360"
-            />
-            <h2 class="subtitle">Organic Food</h2>
-            <p class="text">Web Site</p>
-          </li>
-          <li>
-            <img src="./images/Coffe.jpg" alt="Fresh Coffee" width="360" />
-            <h2 class="subtitle">Fresh Coffee</h2>
-            <p class="text">Web Site</p>
-          </li>
-        </ul>
-      </div>
+      <section class="section-portfolio">
+        <div class="container">
+          <ul class="list button">
+            <li class="item-btn">
+              <button type="button" class="btn portfolio">All</button>
+            </li>
+            <li class="item-btn">
+              <button type="button" class="btn portfolio">Web Site</button>
+            </li>
+            <li class="item-btn">
+              <button type="button" class="btn portfolio">App</button>
+            </li>
+            <li class="item-btn">
+              <button type="button" class="btn portfolio">Design</button>
+            </li>
+            <li class="item-btn">
+              <button type="button" class="btn portfolio">Marketing</button>
+            </li>
+          </ul>
+          <ul class="list example">
+            <li class="item-example">
+              <img
+                class="example-img"
+                src="./images/BankApp.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+              />
+              <div class="text-example">
+                <h2 class="subtitle">Banking App Interface Concept</h2>
+                <p class="text">App</p>
+              </div>
+            </li>
+            <li class="item-example">
+              <img
+                class="example-img"
+                src="./images/Payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <div class="text-example">
+                <h2 class="subtitle">Cashless Payment</h2>
+                <p class="text">Marketing</p>
+              </div>
+            </li>
+            <li class="item-example">
+              <img
+                class="example-img"
+                src="./images/App.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <div class="text-example">
+                <h2 class="subtitle">Meditation App</h2>
+                <p class="text">App</p>
+              </div>
+            </li>
+            <li class="item-example">
+              <img
+                class="example-img"
+                src="./images/TaxiService.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <div class="text-example">
+                <h2 class="subtitle">Taxi Service</h2>
+                <p class="text">Marketing</p>
+              </div>
+            </li>
+            <li class="item-example">
+              <img
+                class="example-img"
+                src="./images/Screen.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <div class="text-example">
+                <h2 class="subtitle">Screen Illustrations</h2>
+                <p class="text">Design</p>
+              </div>
+            </li>
+            <li class="item-example">
+              <img
+                class="example-img"
+                src="./images/OnlineCourses.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <div class="text-example">
+                <h2 class="subtitle">Online Courses</h2>
+                <p class="text">Marketing</p>
+              </div>
+            </li>
+            <li class="item-example">
+              <img
+                class="example-img"
+                src="./images/InstagramStoriesConcept.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+              />
+              <div class="text-example">
+                <h2 class="subtitle">Instagram Stories Concept</h2>
+                <p class="text">Design</p>
+              </div>
+            </li>
+            <li class="item-example">
+              <img
+                class="example-img"
+                src="./images/OrganicFood.jpg"
+                alt="Organic Food"
+                width="360"
+              />
+              <div class="text-example">
+                <h2 class="subtitle">Organic Food</h2>
+                <p class="text">Web Site</p>
+              </div>
+            </li>
+            <li class="item-example">
+              <img
+                class="example-img"
+                src="./images/Coffe.jpg"
+                alt="Fresh Coffee"
+                width="360"
+              />
+              <div class="text-example">
+                <h2 class="subtitle">Fresh Coffee</h2>
+                <p class="text">Web Site</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer-section">
       <div class="container">
