--- a/index.html
+++ b/index.html
@@ -17,20 +17,24 @@
   </head>
   <body>
     <header class="header-section">
-      <div class="container">
-        <nav>
+      <div class="container header">
+        <nav class="main-nav">
           <a href="./index.html" class="list"
             ><p class="logo"><span class="logo-span">WEB</span>STUDIO</p></a
           >
-          <ul class="list">
-            <li><a href="./index.html" class="list navigation">Studio</a></li>
-            <li>
+          <ul class="list nav">
+            <li class="item">
+              <a href="./index.html" class="list navigation">Studio</a>
+            </li>
+            <li class="item">
               <a href="./portfolio.html" class="list navigation">Portfolio</a>
             </li>
-            <li><a href="" class="list navigation">Contacts</a></li>
+            <li class="item">
+              <a href="" class="list navigation">Contacts</a>
+            </li>
           </ul>
         </nav>
-        <address class="">
+        <address class="addres">
           <a href="mailto:info@devstudio.com" class="list contact"
             >info@devstudio.com</a
           >
@@ -48,31 +52,31 @@
         </div>
       </section>
       <section class="section">
-        <div class="container">
+        <div class="container rules">
           <!-- <h2 class="title">Rules</h2> -->
           <ul class="list">
-            <li>
+            <li class="item-rules">
               <h3 class="subtitle">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="item-rules">
               <h3 class="subtitle">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="item-rules">
               <h3 class="subtitle">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="item-rules">
               <h3 class="subtitle">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -85,52 +89,62 @@
       <section class="section about">
         <div class="container">
           <h2 class="title">What are we doing</h2>
-          <ul class="list">
-            <li>
+          <ul class="list about">
+            <li class="item-about">
               <img src="./images/computer.jpg" alt="computer" width="360" />
             </li>
-            <li>
+            <li class="item-about">
               <img src="./images/screenshot.jpg" alt="screenshot" width="360" />
             </li>
-            <li><img src="./images/phone.jpg" alt="phone" width="360" /></li>
+            <li class="item-about">
+              <img src="./images/phone.jpg" alt="phone" width="360" />
+            </li>
           </ul>
         </div>
       </section>
       <section class="team-section section">
         <div class="container">
           <h2 class="title">Our Team</h2>
-          <ul class="list">
-            <li>
+          <ul class="list team">
+            <li class="item-team">
               <img
                 src="./images/Mark-Guerrero.jpg"
                 alt="Mark Guerrero"
                 width="264"
               />
-              <h3 class="subtitle">Mark Guerrero</h3>
-              <p class="text">Product Designer</p>
+              <div class="team-info">
+                <h3 class="subtitle">Mark Guerrero</h3>
+                <p class="text">Product Designer</p>
+              </div>
             </li>
-            <li>
+            <li class="item-team">
               <img src="./images/Tom-Ford.jpg" alt="Tom Ford" width="264" />
-              <h3 class="subtitle">Tom Ford</h3>
-              <p class="text">Frontend Developer</p>
+              <div class="team-info">
+                <h3 class="subtitle">Tom Ford</h3>
+                <p class="text">Frontend Developer</p>
+              </div>
             </li>
-            <li>
+            <li class="item-team">
               <img
                 src="./images/Camila-Garcia.jpg"
                 alt="Camila Garcia"
                 width="264"
               />
-              <h3 class="subtitle">Camila Garcia</h3>
-              <p class="text">Marketing</p>
+              <div class="team-info">
+                <h3 class="subtitle">Camila Garcia</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="item-team">
               <img
                 src="./images/Daniel-Wilson.jpg"
                 alt="Daniel Wilson"
                 width="264"
               />
-              <h3 class="subtitle">Daniel Wilson</h3>
-              <p class="text">UI Designer</p>
+              <div class="team-info">
+                <h3 class="subtitle">Daniel Wilson</h3>
+                <p class="text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
