--- a/index.html
+++ b/index.html
@@ -53,9 +53,14 @@
       </section>
       <section class="section">
         <div class="container rules">
-          <!-- <h2 class="title">Rules</h2> -->
+          <h2 class="title visually-hidden">Rules</h2>
           <ul class="list">
             <li class="item-rules">
+              <div class="foto-rules">
+                <svg class="svg-rules">
+                  <use href="./images/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
@@ -63,6 +68,11 @@
               </p>
             </li>
             <li class="item-rules">
+              <div class="foto-rules">
+                <svg class="svg-rules">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
@@ -70,6 +80,11 @@
               </p>
             </li>
             <li class="item-rules">
+              <div class="foto-rules">
+                <svg class="svg-rules">
+                  <use href="./images/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
@@ -77,6 +92,11 @@
               </p>
             </li>
             <li class="item-rules">
+              <div class="foto-rules">
+                <svg class="svg-rules">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -116,12 +136,128 @@
                 <h3 class="subtitle">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
               </div>
+              <div class="social-icon">
+                <ul class="list">
+                  <li class="item">
+                    <a
+                      href="https://www.instagram.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Instagram"
+                      class="social-link"
+                    >
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/sprite.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a
+                      href="https://www.twitter.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Twitter"
+                      class="social-link"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a
+                      href="https://www.facebook.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Facebook"
+                      class="social-link"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a
+                      href="https://www.linkedin.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="LinkedIn"
+                      class="social-link"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="item-team">
               <img src="./images/Tom-Ford.jpg" alt="Tom Ford" width="264" />
               <div class="team-info">
                 <h3 class="subtitle">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
+              </div>
+              <div class="social-icon">
+                <ul class="list">
+                  <li class="item">
+                    <a
+                      href="https://www.instagram.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Instagram"
+                      class="social-link"
+                    >
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/sprite.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a
+                      href="https://www.twitter.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Twitter"
+                      class="social-link"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a
+                      href="https://www.facebook.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Facebook"
+                      class="social-link"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a
+                      href="https://www.linkedin.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="LinkedIn"
+                      class="social-link"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item-team">
@@ -134,6 +270,64 @@
                 <h3 class="subtitle">Camila Garcia</h3>
                 <p class="text">Marketing</p>
               </div>
+              <div class="social-icon">
+                <ul class="list">
+                  <li class="item">
+                    <a
+                      href="https://www.instagram.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Instagram"
+                      class="social-link"
+                    >
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/sprite.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a
+                      href="https://www.twitter.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Twitter"
+                      class="social-link"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a
+                      href="https://www.facebook.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Facebook"
+                      class="social-link"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a
+                      href="https://www.linkedin.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="LinkedIn"
+                      class="social-link"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="item-team">
               <img
@@ -145,6 +339,101 @@
                 <h3 class="subtitle">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
               </div>
+              <div class="social-icon">
+                <ul class="list">
+                  <li class="item">
+                    <a
+                      href="https://www.instagram.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Instagram"
+                      class="social-link"
+                    >
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/sprite.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a
+                      href="https://www.twitter.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Twitter"
+                      class="social-link"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a
+                      href="https://www.facebook.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Facebook"
+                      class="social-link"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a
+                      href="https://www.linkedin.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="LinkedIn"
+                      class="social-link"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
+          <h2 class="title">Customers</h2>
+          <ul class="list customers">
+            <li class="item-customers">
+              <svg class="svg-customers">
+                <use href="./images/sprite.svg#icon-Logo"></use>
+              </svg>
+            </li>
+            <li class="item-customers">
+              <svg class="svg-customers">
+                <use href="./images/sprite.svg#icon-Logo-1"></use>
+              </svg>
+            </li>
+            <li class="item-customers">
+              <svg class="svg-customers">
+                <use href="./images/sprite.svg#icon-Logo-2"></use>
+              </svg>
+            </li>
+            <li class="item-customers">
+              <svg class="svg-customers">
+                <use href="./images/sprite.svg#icon-Logo-3"></use>
+              </svg>
+            </li>
+            <li class="item-customers">
+              <svg class="svg-customers">
+                <use href="./images/sprite.svg#icon-Logo-4"></use>
+              </svg>
+            </li>
+            <li class="item-customers">
+              <svg class="svg-customers">
+                <use href="./images/symbol-defs.svg#icon-Logo-6"> href="./images/sprite.svg"</use>
+              </svg>
             </li>
           </ul>
         </div>
