--- a/portfolio.html
+++ b/portfolio.html
@@ -178,17 +178,78 @@
       </section>
     </main>
     <footer class="footer-section">
-      <div class="container">
-        <a href="./index.html" class="list"
-          ><p class="logo footer">
-            <span class="logo-span">WEB</span>STUDIO
-          </p></a
-        >
-        <p class="text footer">
-          Increase the flow of customers and <br />
-          sales for your business with digital <br />
-          marketing & growth solutions.
-        </p>
+      <div class="container footer">
+        <div>
+          <a href="./index.html" class="list"
+            ><p class="logo footer">
+              <span class="logo-span">WEB</span>STUDIO
+            </p></a
+          >
+          <p class="text footer">
+            Increase the flow of customers and <br />
+            sales for your business with digital <br />
+            marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media">
+          <p class="text-social-media">Social media</p>
+          <div class="social-icon">
+            <ul class="list">
+              <li class="item footer">
+                <a
+                  href="https://www.instagram.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Instagram"
+                  class="social-link footer"
+                >
+                  <svg width="16" height="16">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item footer">
+                <a
+                  href="https://www.twitter.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Twitter"
+                  class="social-link footer"
+                >
+                  <svg width="16" height="16">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item footer">
+                <a
+                  href="https://www.facebook.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Facebook"
+                  class="social-link footer"
+                >
+                  <svg width="16" height="16">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item footer">
+                <a
+                  href="https://www.linkedin.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="LinkedIn"
+                  class="social-link footer"
+                >
+                  <svg width="16" height="16">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
