--- a/index.html
+++ b/index.html
@@ -147,9 +147,7 @@
                       class="social-link"
                     >
                       <svg width="16" height="16">
-                        <use
-                          href="./images/sprite.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -212,9 +210,7 @@
                       class="social-link"
                     >
                       <svg width="16" height="16">
-                        <use
-                          href="./images/sprite.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -281,9 +277,7 @@
                       class="social-link"
                     >
                       <svg width="16" height="16">
-                        <use
-                          href="./images/sprite.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -350,9 +344,7 @@
                       class="social-link"
                     >
                       <svg width="16" height="16">
-                        <use
-                          href="./images/sprite.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -406,51 +398,124 @@
           <h2 class="title">Customers</h2>
           <ul class="list customers">
             <li class="item-customers">
-              <svg class="svg-customers">
-                <use href="./images/sprite.svg#icon-Logo"></use>
-              </svg>
+              <a href="#" class="link-customers">
+                <svg class="svg-customers" width="41" height="46">
+                  <use href="./images/sprite.svg#icon-group"></use>
+                </svg>
+              </a>
             </li>
             <li class="item-customers">
-              <svg class="svg-customers">
-                <use href="./images/sprite.svg#icon-Logo-1"></use>
-              </svg>
+              <a href="#" class="link-customers">
+                <svg class="svg-customers" width="40" height="51">
+                  <use href="./images/sprite.svg#icon-group-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="item-customers">
-              <svg class="svg-customers">
-                <use href="./images/sprite.svg#icon-Logo-2"></use>
-              </svg>
+              <a href="#" class="link-customers">
+                <svg class="svg-customers" width="44" height="41">
+                  <use href="./images/sprite.svg#icon-group-2"></use>
+                </svg>
+              </a>
             </li>
             <li class="item-customers">
-              <svg class="svg-customers">
-                <use href="./images/sprite.svg#icon-Logo-3"></use>
-              </svg>
+              <a href="#" class="link-customers">
+                <svg class="svg-customers" width="84" height="41">
+                  <use href="./images/sprite.svg#icon-group-3"></use>
+                </svg>
+              </a>
             </li>
             <li class="item-customers">
-              <svg class="svg-customers">
-                <use href="./images/sprite.svg#icon-Logo-4"></use>
-              </svg>
+              <a href="#" class="link-customers">
+                <svg class="svg-customers" width="63" height="46">
+                  <use href="./images/sprite.svg#icon-group-4"></use>
+                </svg>
+              </a>
             </li>
             <li class="item-customers">
-              <svg class="svg-customers">
-                <use href="./images/symbol-defs.svg#icon-Logo-6"> href="./images/sprite.svg"</use>
-              </svg>
+              <a href="#" class="link-customers">
+                <svg class="svg-customers" width="94" height="45">
+                  <use href="./images/sprite.svg#icon-group-5"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer-section">
-      <div class="container">
-        <a href="./index.html" class="list"
-          ><p class="logo footer">
-            <span class="logo-span">WEB</span>STUDIO
-          </p></a
-        >
-        <p class="text footer">
-          Increase the flow of customers and <br />
-          sales for your business with digital <br />
-          marketing & growth solutions.
-        </p>
+      <div class="container footer">
+        <div>
+          <a href="./index.html" class="list"
+            ><p class="logo footer">
+              <span class="logo-span">WEB</span>STUDIO
+            </p></a
+          >
+          <p class="text footer">
+            Increase the flow of customers and <br />
+            sales for your business with digital <br />
+            marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media">
+          <p class="text-social-media">Social media</p>
+          <div class="social-icon">
+            <ul class="list">
+              <li class="item footer">
+                <a
+                  href="https://www.instagram.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Instagram"
+                  class="social-link footer"
+                >
+                  <svg width="16" height="16">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item footer">
+                <a
+                  href="https://www.twitter.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Twitter"
+                  class="social-link footer"
+                >
+                  <svg width="16" height="16">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item footer">
+                <a
+                  href="https://www.facebook.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Facebook"
+                  class="social-link footer"
+                >
+                  <svg width="16" height="16">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item footer">
+                <a
+                  href="https://www.linkedin.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="LinkedIn"
+                  class="social-link footer"
+                >
+                  <svg width="16" height="16">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
